Aligned info boxes on selection page by giving the game-indices/wagers a fixed width. Right aligned indices to improve alignment look and feel as well.

--- a/pickem/static/pickem/css/sortable_selection.css
+++ b/pickem/static/pickem/css/sortable_selection.css
@@ -108,6 +108,9 @@
     padding-right: 10px;
     font-size: 14pt;
     font-weight: bold;
+    text-align: right;
+    width: 35px;
+    display: inline-block;
 }
 
 .game_title {
